SLING-12730 remove jacoco workaround, breaks the build